# calcit-regex

./: Cargo.toml  README.md  calcit.cirru  compact.cirru  deps.cirru
.github/workflows/: check.yaml
src/: lib.rs
